# counter-example

./: .gitignore  Cargo.toml  Dockerfile  README.md  mix.exs
lib/: counter_example.ex  create.ex  nif.ex  proof.ex
lib/structs/: counter_logic.ex  counter_witness.ex
native/counter_app/: Cargo.toml
native/counter_app/src/: eth.rs  init.rs  main.rs  util.rs
native/counter_library/: Cargo.toml
native/counter_library/elf/: id.txt
native/counter_library/src/: lib.rs  rustler_util.rs
native/counter_nif/: Cargo.toml
native/counter_nif/src/: lib.rs
native/counter_witness/: Cargo.toml
native/counter_witness/src/: lib.rs  rustler_util.rs
test/: counter_example_test.exs
