[workspace]
resolver = "2"

members = [ "native/counter_app","native/counter_nif", "native/counter_app", "native/counter_logic_circuit/counter_methods"]

# Always optimize; building and running the guest takes much longer without optimization.
[profile.dev]
opt-level = 3

[profile.release]
debug = 1
lto = true

[patch.'https://github.com/anoma/arm-risc0']
arm = { git = "https://github.com/anoma/arm-risc0?rev=c303dd23d123e9c09c752c05689678e4eb210606" }