[workspace]
resolver = "2"

members = [ "native/counter_app","native/counter_nif", "native/counter_app", "native/counter_logic_circuit/counter_methods"]

# Always optimize; building and running the guest takes much longer without optimization.
[profile.dev]
opt-level = 3

[profile.release]
debug = 1
lto = true

[patch.'https://github.com/anoma/arm-risc0']
arm = { git = "https://github.com/anoma/arm-risc0?rev=ece16ec71abf13cae42fde77fc2f60e529276614", rev = "ece16ec71abf13cae42fde77fc2f60e529276614" }