[package]
name = "counter_nif"
version = "0.1.0"
edition = "2021"

[lib]
name = "counter_nif"
crate-type = ["cdylib"]

[dependencies]
serde = "1.0"
counter_witness = { path = "../counter_witness", features = ["nif"] }
counter_library = { path = "../counter_library", features = ["nif"]}
arm = { git = "https://github.com/anoma/arm-risc0", branch = "jurevans/patch-keys-0.6.1", default-features = false, features = ["transaction", "bonsai", "nif"] }
rand = "0.8"
risc0-zkvm = { version = "3.0.3", default-features = false, features = ["std", "unstable"] }
lazy_static = "1.5.0"
hex = "0.4"
# evm_protocol_adapter_bindings = { git = "https://github.com/anoma/evm-protocol-adapter", branch = "feature/crate"}
tokio = "1.47.1"
# nif specific
rustler = "0.36.2"
bincode = "1.3.3"