[package]
name = "counter_witness"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = "1.0"
arm = { git = "https://github.com/anoma/arm-risc0", branch = "m1dnight/encoding-decoding-keypair",  default-features = false}
rand = "0.8"
rustler = {version = "0.36.2", optional = true}
bincode = "1.3.3"

[features]
default = []
nif = ["arm/nif", "dep:rustler"]