[package]
name = "counter_witness"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = "1.0"
arm = { git = "https://github.com/anoma/arm-risc0", rev = "4b16d95629a6ddd3a6c0477a5c2c05c899a6b3a5", default-features = false}
rand = "0.8"
rustler = {version = "0.36.2", optional = true}
bincode = "1.3.3"

[features]
default = []
nif = ["arm/nif", "dep:rustler"]